fixed height of event components on mobile

--- a/src/styles/gordrusby.css
+++ b/src/styles/gordrusby.css
@@ -141,8 +141,8 @@
 
 @media only screen and (max-width: 640px) {
     .grRow {
-        min-height: 140vh;
         height: auto;
+        min-height: 960px;
         width: 100vw;
         display: flex;
         flex-direction: column;
@@ -156,7 +156,7 @@
         height: 100vh;
         width: 100%;
         padding-left: 1em;
-        padding-right: 1em;
+        padding-right: 1.5em;
         padding-top: 6em;
     }
 
