--- a/src/styles/kenlake.css
+++ b/src/styles/kenlake.css
@@ -135,8 +135,8 @@
 
 @media only screen and (max-width: 640px) {
     .klRow {
-        min-height: 140vh;
         height: auto;
+        min-height: 960px;
         width: 100vw;
         display: flex;
         flex-direction: column;
@@ -150,7 +150,7 @@
         height: 110vh;
         width: 100%;
         padding-left: 1em;
-        padding-right: 1em;
+        padding-right: 1.5em;
     }
 
     .klBanner {
@@ -242,7 +242,9 @@
 
     .eventImage {
         width: 100%;
-        height: 400px;
+        height: 70vw;
+        object-fit: cover;
+        padding-top: 5vh;
     }
 }
 
